--- a/package.json
+++ b/package.json
@@ -1,18 +1,8 @@
+json
 {
-  "name": "socialspot-backend",
+  "name": "socialspot",
   "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "socket.io": "^4.7.2",
-    "dotenv": "^16.3.1"
+    "build": "echo 'Static site, no build needed'"
   }
 }
