--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
   "display": "standalone",
   "background_color": "#ffffff", 
   "theme_color": "#2563eb",
+  "theme_color": "#7c3aed",
   "orientation":  "portrait-primary",
   "icons": [
     {
